# FEWview

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: cluster_rendering.md  tutorial.md
examples/: tutorial.ipynb
src/fewview/: __init__.py  _core.py  colormaps.py  geodesic.py  plotting.py  rendering.py  surface.py  volume.py  waveform.py
src/fewview/cli/: __init__.py  animate.py  cluster_job.py  cluster_merge.py  cluster_segment.py  render_still.py
tests/: test_core.py  test_geodesic.py  test_public_api.py
